@@ -1,6 +1,6 @@
 DIST tucan-0.3.9.tar.gz 338109 RMD160 9f2cbafb3c74435c027cd21b90913d8c16eff23d SHA1 c2aa4447a6a802c975b218815648536814ea2ae4 SHA256 ec1cb4f28b444af36389be5f5080774f2bd90ef55d3a9a3b748cbe16eef1cab5
 DIST tucan-9999.tar.gz 338109 RMD160 9f2cbafb3c74435c027cd21b90913d8c16eff23d SHA1 c2aa4447a6a802c975b218815648536814ea2ae4 SHA256 ec1cb4f28b444af36389be5f5080774f2bd90ef55d3a9a3b748cbe16eef1cab5
-EBUILD tucan-0.3.9.ebuild 809 RMD160 9a387aae26dccb0dda775a5003f30ef92acaf11d SHA1 09a3d3580a738fd5a5590ec303f1400f40054384 SHA256 e6ca338d2b01c7bb7c9017791c30a4f09b93b396d2335712c2239b2aded6f5d3
-EBUILD tucan-9999.ebuild 907 RMD160 b365df83416a5185a769d7bce9a94906643c3ee8 SHA1 bb7167c487318c68c489ea9203f78eee5c4e43ce SHA256 8e10516f36a27fbba7311afbc4d49cdecbaee9b10f30ac52d44195f132639254
-MISC ChangeLog 681 RMD160 b56f82fd2133d13e4712a6c47e9aadcc32276b19 SHA1 4c864997bcd82f75f849ca9f2595bb57d39398a8 SHA256 bb6b1562c5a558cf58341bf9584afbe4bb5c73aeadbbcbecb756b8d8f1df8edf
+EBUILD tucan-0.3.9.ebuild 806 RMD160 930ff11c205fe67dccdd21335c20545e78e9da22 SHA1 555eb4f9a70350f124b63f7d4cb6d2c1bf6eeb07 SHA256 6954b89bef678153f097be6a9fed2c145600bcfac7b483314abb60f74cfd3fe6
+EBUILD tucan-9999.ebuild 904 RMD160 89c211d1d5f6baf5a7b0e31fd7e461b291feb66a SHA1 384dd68cd019d1868fa528e5e293b4c9cd5650d5 SHA256 e3c7fbc5f3baf723541f9d03f3957fed66bc76f8f9283495937b7d48448a68bc
+MISC ChangeLog 874 RMD160 3bc86d43cb1f2d84b7bd69e7b56d2aff21eb0119 SHA1 6fb15ece9286bafd9c8091d7a0499b305e5c8d58 SHA256 40898dfc16e0da175ebc555c88f2bb4f37b029d18307d1befc5bebb5343dd154
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
