@@ -6,7 +6,7 @@ EAPI="2"
 
 inherit eutils
 
-DESCRIPTION="Manages automatically downloads and uploads from one-click hosting sites like RapidShare."
+DESCRIPTION="Manages automatically downloads and uploads from one-click hosting sites like RapidShare"
 HOMEPAGE="http://tucaneando.com/"
 SRC_URI="http://forja.rediris.es/frs/download.php/1470/${P}.tar.gz"
 
@@ -27,7 +27,7 @@ src_install() {
 	emake DESTDIR="${D}"/usr install || die "emake install failed"
 	dodoc CHANGELOG README || die "dodoc failed"
 	if use gtk ; then
-		newicon media/tucan.svg "${PN}.svg" || die "newicon failed"
+		doicon media/tucan.svg "${PN}.svg" || die "doicon failed"
 		make_desktop_entry tucan Tucan
 	fi
 }
