@@ -4,6 +4,10 @@
 
   04 Jan 2010; Fabiano Francesconi (elbryan) <fabiano.francesconi@gmail.com>
   tucan-0.3.9.ebuild, tucan-9999.ebuild:
+  Fixed doicon and ebuild description, thanks to Tommy and Nathan Phillip
+
+  04 Jan 2010; Fabiano Francesconi (elbryan) <fabiano.francesconi@gmail.com>
+  tucan-0.3.9.ebuild, tucan-9999.ebuild:
   Fixed issue with newicon. Updated license.
 
   03 Jan 2010; Fabiano Francesconi (elbryan) <fabiano.francesconi@gmail.com>
